--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "portfolio",
-	"homepage": "https://shyam.store",
+	"homepage": "https://shyam.store/portfolio",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
